# leetcode-coach

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1c7d11191ee3_add_daily_plans_table.py  420659e8a0b7_create_initial_tables.py  5d2807379724_add_github_auth_columns.py
backend/app/: auth.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/prompts/: coach.md  interviewer.md  interviewer_finish.md  reporter.md  reviewer.md  teachback.md
backend/app/routers/: attempts.py  auth.py  hints.py  mock.py  plan.py  problems.py  profile.py  reports.py  review.py  stats.py  teachback.py
backend/app/services/: llm.py  planner.py  scheduler.py  tracks.py  weakness.py
backend/scripts/: backup.py  restore.py
backend/seed/: import_seed.py  ml_problems.json  primers.json  problems.json
backend/tests/: conftest.py  test_api.py  test_auth.py  test_daily_plan.py  test_db_url.py  test_feedback_loop.py  test_health.py  test_mock.py  test_planner.py  test_scheduler.py  test_tracks.py  test_weakness.py
docs/: blog-draft.md  decisions.md
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Markdown.tsx  MlWorkbench.tsx  MockReport.tsx  ProblemMeta.tsx
frontend/src/lib/: api.ts  labels.ts  pyodide.ts
frontend/src/pages/: Mock.tsx  MockDetail.tsx  Onboarding.tsx  Problem.tsx  Reports.tsx  Stats.tsx  Today.tsx  (+1 more)
